Update README.md
add `--enable-preview` to `java -jar ...` command